@@ -15,6 +15,13 @@ if (!check_permission($userid, 'Modify Files')) die();
 require_once(dirname(__FILE__).'/config.inc.php');
 require_once(dirname(__FILE__).'/Classes/ImageManager.php');
 
+@session_cache_limiter('private');
+header("Expires: Mon, 26 Jul 1997 05:00:00 GMT");
+header("Last-Modified: " . gmdate("D, d M Y H:i:s") . " GMT");
+header("Cache-Control: no-store, no-cache, must-revalidate");
+header("Cache-Control: post-check=0, pre-check=0", false);
+header("Pragma: no-cache");
+
 //default path is /
 $relative = '/';
 $manager = new ImageManager($IMConfig);
